# SkyAlert

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  conftest.py  dashboard.py  data_manager.py  docker-compose.yml  flight_data.py  flight_search.py  main.py  notification_manager.py  price_history.py  pyproject.toml  requirements.txt  scheduler.py
.github/workflows/: ci.yml
templates/: alert_email.html  dashboard.html
tests/: test_data_manager.py  test_flight_data.py  test_notification_manager.py  test_price_history.py
